# API-Transformation

./: .gitignore  README.md  pyproject.toml
infrastructure/: README.md
infrastructure/enviroments/modules/ecr/: main.tf  outputs.tf
infrastructure/enviroments/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/modules/iam/: main.tf  outputs.tf
infrastructure/enviroments/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/modules/lb/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/modules/msk/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/modules/queue/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/enviroments/streamlit-fe/: config.tf  main.tf  outputs.tf  requirements.txt  variables.tf
lambda-packages/: pyproject.toml
lambda-packages/api-transformation/: Dockerfile  lambda_function.py  requirements.txt
lambda-packages/api-transformation/package/jmespath-1.0.1.dist-info/: RECORD
lambda-packages/api-transformation/package/numpy-1.23.5.dist-info/: RECORD
lambda-packages/api-transformation/package/python_dotenv-0.21.0.dist-info/: RECORD
lambda-packages/api-transformation/package/regex-2022.10.31.dist-info/: RECORD
streamlit/: Dockerfile  app.py  pyproject.toml  requirements.txt  streamlit.env
streamlit/src/config/: client_config.py  confluent_consumer.py  confluent_producer.py  main_execution.py  producer.py  sqs_execution.py
supporting/: docker-compose.yml
(+6 files in other folders)
