[tool.poetry]
name = "streamlit-aws-fe"
version = "0.1.0"
description = ""
authors = ["Craig  <craigstuart@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
python-dotenv = "^0.21.0"
confluent-kafka = "^1.9.2"
regex = "^2022.10.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

