[tool.poetry]
name = "streamlit-aws-fe"
version = "0.1.0"
description = ""
authors = ["Craig  <craigstuart@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
streamlit = "^1.15.1"
watchdog = "^2.1.9"
boto3 = "^1.26.16"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
